[workspace]
resolver = "2"
members = [
    "server",
    "client",
]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
hyper = { version = "1.3", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["trace", "cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dashmap = "5.5"
url = "2.5"
bytes = "1.6"
base64 = "0.22"
native-tls = "0.2"
rand = "0.8"
async-stream = "0.3"
