[package]
name = "tunly-client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
native-tls = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
async-stream = { workspace = true }
