[package]
name = "tunly-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
hyper = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
base64 = { workspace = true }
async-stream = { workspace = true }
